# novaSandbox

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  Makefile  PERFORMANCE_RESULTS.md  PROJECT_INDEX.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  QUICK_START.py  README.md  SECURITY.md  SECURITY_CHECKLIST.md  SECURITY_GUIDE.md  SECURITY_SUMMARY.md  TEST_RESULTS_SUMMARY.md  __init__.py  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: tests.yml
core/: __init__.py  hypervisor.py  sandbox.py  security.py  template_manager.py
examples/: __init__.py  api_server.py  basic_usage.py  firecracker_setup.py  performance_report.py  performance_test.py  security_test.py  starter_kit.py
providers/: __init__.py  apple_vz.py  firecracker.py
templates/: __init__.py  alpine-python.json
tests/: __init__.py  benchmark.py  test_sandbox.py
